<resources>
    <string name="app_name">AECOL86</string>
    <string name="Ac_login_txt_email">Email</string>
    <string name="Ac_login_txt_password">Contraseña</string>
    <string name="Ac_login_txt_conectarse">Conectarse</string>
    <string name="Ac_login_txt_registrarse">Registrarse</string>
    <string name="activity_login_error_message">Error al iniciar sesión</string>
    <string name="Ac_login_txt_nombre">Nombre</string>
    <string name="Ac_login_txt_telefono">Telefono</string>
    <string name="Ac_register_error_campo_vacio">Error, campo vacío</string>
    <string name="Ac_register_error_telefono_incompleto">Error, el número de telefono no es valido</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="Ac_information_txt_nombre_estudiante">Nombre del estudiante</string>
    <string name="Ac_information_txt_telefono_emergencia">Telefono de emergencia</string>
    <string name="Ac_information_txt_residencia">Residencia</string>
    <string name="Ac_information_txt_carrera">Carrera</string>
    <string name="Ac_information_txt_transporte">Transporte</string>
    <string name="Ac_information_txt_fecha">Fecha de llegada</string>
    <string name="Ac_information_txt_encargado">Encargado:</string>
    <string name="Ac_information_txt_opcionales">Opcionales</string>
    <string name="Ac_information_txt_hotel">Hotel Temporal</string>
    <string name="Ac_information_txt_info">Información Adicional</string>
    <string name="Ac_information_txt_telefono_sin_identificador">Ingrese el numero de telefono sin identificador del pais</string>
</resources>
